--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomSupplementaryDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomSupplementaryDataTab.html
@@ -10,12 +10,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:extend>
-    <div class="span4">
-    	<!--
+    <div class="span4" wicket:id="otherMarkersContainer">
         <h3>
             <wicket:message key="otherMarkers.label"/>
         </h3>
-        -->
         <div class="row">
             <div wicket:id="96rmnch"/>
         </div>
