Fix the geography issue. (ODAEU-234)

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
@@ -12,11 +12,11 @@
 	<title><wicket:message key="page.title"/></title>
 
     <!-- load CDF libs css files -->
-    <link href="/js/theme/cupertino/jquery-ui-1.8.custom.css" rel="stylesheet" type="text/css"/>
-    <link href="/js/addIns/coltypes.css" rel="stylesheet" type="text/css"/>
+    <link href="js/theme/cupertino/jquery-ui-1.8.custom.css" rel="stylesheet" type="text/css"/>
+    <link href="js/addIns/coltypes.css" rel="stylesheet" type="text/css"/>
 
     <!-- load CDF general styles -->
-    <link href="/js/cdfcss.min.css" rel="stylesheet" type="text/css"/>
+    <link href="js/cdfcss.min.css" rel="stylesheet" type="text/css"/>
 </wicket:head>
 <body>
 <wicket:extend>
