--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
@@ -16,7 +16,8 @@
             <div class="container">
                 <div class="row">
                     <div class="span12">
-                        <h1>Custom Dashboards - Country Sector</h1>
+                        <h2 wicket:id="title"/>
+                        <br/>
                     </div>
 
                     <div class="span6">
