dashboard custom report country-sector. (ODAEU-238)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
@@ -35,6 +35,14 @@
                         <br/>
                         <div class="row">
                             <div class="span4">
+                                <h4 wicket:id="choiceOfCurrency"/>
+                                <div wicket:id="pricesNationalCurrency"/>
+                                <div wicket:id="pricesEURCurrency"/>
+                            </div>
+                        </div>
+                        <br/>
+                        <div class="row">
+                            <div class="span4">
                                 <input wicket:id="submit" type="button"/>
                             </div>
                         </div>
