--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfFlowDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfFlowDashboards.html
@@ -21,11 +21,45 @@
                 </div>
 
                 <div class="span6">
-
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="typeOfAidTableTitle"/>
+                            </h2>
+                        </div>
+                        <table wicket:id="typeOfAidTable">
+                            <thead>
+                            <tr>
+                                <th rowspan="2" class="ui-state-default">Institution</th>
+                                <th rowspan="2" class="ui-state-default">Country</th>
+                                <th colspan="2" class="ui-state-default" wicket:id="firstYear"></th>
+                            </tr>
+                            <tr>
+                                <th wicket:id="nationalCurrencyFirst"/>
+                                <th>$</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr wicket:id="typeOfAidTableRows">
+                                <td wicket:id="col0" class="string geography">Institution</td>
+                                <td wicket:id="col1" class="string">Country</td>
+                                <td wicket:id="col2" class="numeric">National Currency 1</td>
+                                <td wicket:id="col3" class="numeric">$</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="span6">
-
+                    <!--<div class="box">-->
+                        <!--<div class="box-header">-->
+                            <!--<h2>-->
+                                <!--<div wicket:id="typeOfAidChartTitle"/>-->
+                            <!--</h2>-->
+                        <!--</div>-->
+                        <!--<div wicket:id="typeOfAidChart"/>-->
+                    <!--</div>-->
                 </div>
             </div> <!-- /row -->
         </div> <!-- /container -->
