--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
@@ -50,16 +50,27 @@
                         </table>
                     </div>
                 </div>
-
+                <br/><br/>
                 <div class="span6">
-                    <!--<div class="box">-->
-                    <!--<div class="box-header">-->
-                    <!--<h2>-->
-                    <!--<div wicket:id="typeOfAidChartTitle"/>-->
-                    <!--</h2>-->
-                    <!--</div>-->
-                    <!--<div wicket:id="typeOfAidChart"/>-->
-                    <!--</div>-->
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="typeOfAidChartTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="typeOfAidChart"/>
+                    </div>
+                </div>
+
+                <div class="span6 offset3">
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="biMultilateralTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="biMultilateralChart"/>
+                    </div>
                 </div>
             </div> <!-- /row -->
         </div> <!-- /container -->
