--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditOrganizationPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditOrganizationPage.html
@@ -19,7 +19,7 @@
                         <div wicket:id="name"/>
                         <div wicket:id="acronym"/>
                         <div wicket:id="code"/>
-                        <div wicket:id="donorCode"/>
+                        <div wicket:id="donorName"/>
 			 </div>
                     <div class="row">
                         <div class="span4">
