--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomTransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomTransactionPage.html
@@ -10,9 +10,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:extend>
-
-	    <span wicket:id="draft">Draft Transaction</span>            
-
+	    	<span wicket:id="draft">Draft Transaction</span><span wicket:id="approved">Approved Transaction</span>  
 </wicket:extend>
 </body>
 </html>                                                  
