--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -25,9 +25,8 @@
                                     &nbsp;
                                 </div>
                             </div>
-
                             <div class="row">
-                                <div class="span10">
+                               <div class="span10 well form-controls">
                                     <wicket:child/>
                                     <input wicket:id="submit" type="button"/>
                                     <input wicket:id="save" type="button"/>
