Updated Custom Reports. (ODAEU-257)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
@@ -16,14 +16,19 @@
                 </div>
 
                 <div class="span8 offset2 well">
+                    <div>
+                        <i class="icon-info-sign"></i>
+                        <span wicket:id="info"/>
+                        <br/><br/>
+                    </div>
                     <form wicket:id="form">
                         <div class="row">
                             <div wicket:id="geography"/>
                             <div wicket:id="recipient"/>
                             <div wicket:id="nationalInstitution"/>
-                            <div wicket:id="multilateralAgency"/>
                             <div wicket:id="typeOfFlowbiMulti"/>
                             <div wicket:id="typeOfAid"/>
+                            <div wicket:id="multilateralAgency"/>
                             <div wicket:id="sector"/>
                             <div wicket:id="year"/>
                             <div wicket:id="typeOfExpenditure"/>
