--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountryInstitutionDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountryInstitutionDashboards.html
@@ -44,7 +44,7 @@
                             <tr wicket:id="institutionTableRows">
                                 <td wicket:id="col0" class="string">Institution</td>
                                 <td wicket:id="col1" class="string">Country</td>
-                                <td wicket:id="col2" class="numeric">National Currency 1</td>
+                                <td wicket:id="col2" class="numeric">$</td>
                                 <td wicket:id="col3" class="numeric">$</td>
                             </tr>
                             </tbody>
